# ida-cli

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  build.rs  justfile
.github/workflows/: build.yml
.sisyphus/notepads/multi-idb-support/: decisions.md  issues.md  learnings.md
3rd-github/idalib/idalib-build/src/: lib.rs
3rd-github/idalib/idalib-sys/: build.rs  sdk
3rd-github/idalib/idalib-sys/src/: auto_extras.h  bytes_extras.h  expr_extras.cc  expr_extras.h  frame_extras.cc  frame_extras.h  hexrays_extras.h  kernwin_extras.h  lib.rs  lines_extras.h  ph_extras.h  types_extras.cc  types_extras.h  udt_extras.cc  udt_extras.h
3rd-github/idalib/idalib/src/: bookmarks.rs  decompiler.rs  frame.rs  idb.rs  lib.rs  meta.rs  name.rs  processor.rs  script.rs  segment.rs  strings.rs  types.rs  udt.rs  xref.rs
docs/: ARCHITECTURE.md  BUILDING.md  MULTI_IDB.md  README.md  TOOLS.md  TRANSPORTS.md  UPGRADE_PLAN.md
scripts/: decompile_structured.py  install.sh  run_dbg_test.py  stress_test.py  verify_9x_compat.py
shared/: ida_install.rs
skill/: SKILL.md
skill/references/: binary-analysis-patterns.md  counterfactual-patch.md  headless-api.md  ida-domain-api.md  idalib-headless.md  idapython-cheatsheet.md  mcp-tool-reference.md  plugin-development.md
src/: dsc.rs  federation.rs  idat_compat.rs  idb_store.rs  lib.rs  main.rs  rpc_dispatch.rs  sbpf.rs  tool_registry.rs
src/cli/: discovery.rs  format.rs  mod.rs
src/ida/: backend.rs  capabilities.rs  install.rs  loop_impl.rs  mod.rs  request.rs  runtime.rs  types.rs  worker.rs  worker_trait.rs
src/ida/handlers/: address.rs  analysis.rs  annotations.rs  controlflow.rs  database.rs  disasm.rs  functions.rs  imports.rs  mod.rs  strings.rs  types.rs
src/router/: mod.rs  protocol.rs
src/server/: mod.rs  requests.rs  response_cache.rs  socket_listener.rs  task.rs
test/: 3db_integration.sh  README.md  decompile_structured_integration.sh  hexrays_integration.sh  http_integration.sh  justfile  multi_idb_probe_output.txt  multi_integration.sh  ref_count_integration.sh
test/payloads/: mini.jsonl  multi.jsonl
tests/: ida_e2e.rs  multi_idb_probe.rs
