[package]
name = "ida-cli"
version = "0.9.3"
edition = "2021"
description = "Headless IDA Pro MCP server for AI-assisted binary analysis"
license = "MIT"
repository = "https://github.com/cpkt9762/ida-cli"
authors = ["pingzi"]
keywords = ["ida", "mcp", "reverse-engineering", "disassembly", "decompiler"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "ida_mcp"

[[bin]]
name = "ida-cli"
path = "src/main.rs"

[dependencies]
idalib = { path = "3rd-github/idalib/idalib" }
rmcp = { path = "3rd-github/rust-sdk/crates/rmcp", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "net", "signal", "process", "io-util", "time"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
blake3 = "1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
bytes = "1"
http-body = "1"
http-body-util = "0.1"
tower-service = "0.3"

[build-dependencies]
idalib-build = { path = "3rd-github/idalib/idalib-build" }

[dev-dependencies]
rstest = "0.25"

[[bin]]
name = "multi_idb_probe"
path = "tests/multi_idb_probe.rs"
